# repo-sync

./: LICENSE  README.rst  pyproject.toml  setup.cfg  setup.py  sync-repos.conf.example  sync-repos.py  sync_repos.py
