[metadata]
name = repo-sync
version = 0.0.1rc3
long_description = file: README.rst
license = BSD 3-Clause License
requires-dist = setuptools
platform = linux
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = False
py_modules = sync_repos
install_requires =
    pyxdg

[options.entry_points]
console_scripts =
    repo-sync = sync_repos:main
