[metadata]
name = repo-sync
version = attr: sync_repos.__version__
long_description = file: README.rst
license = MIT
requires_dist = setuptools
platform = linux
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = False
py_modules = sync_repos
install_requires =
    pyxdg

[options.entry_points]
console_scripts =
    repo-sync = sync_repos:main
